# Legacy2LakehouseMigrationEngine

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/grafana/provisioning/dashboards/: dashboard.yml  finops.json
config/prometheus/: prometheus.yml
config/trino/: config.properties  jvm.config
config/trino/catalog/: iceberg.properties  postgres.properties
docker/postgres/initdb/: 00_seed.sh
examples/: incremental_migration.py  transpile_only.py
scripts/: run_migration.py  wait-for-services.sh
sql/postgres/: 01_schema.sql  02_seed_customers.sql  03_seed_products.sql  04_seed_orders.sql  05_seed_transactions.sql
sql/trino/: create_iceberg_tables.sql  validate_migration.sql
src/: __init__.py  cli.py  config.py
src/connectors/: postgres.py  trino.py
src/metrics/: prometheus.py
src/pipeline/: discover.py  migrate.py  validate.py
src/transpiler/: engine.py  type_map.py
tests/: conftest.py
tests/integration/: test_e2e_migration.py
tests/unit/: test_transpiler.py  test_type_map.py
