[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "legacy2lakehouse"
version = "0.1.0"
description = "Legacy-to-Lakehouse Migration Engine: Postgres/Oracle → Apache Iceberg via Trino"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "sqlglot>=23.0",
    "psycopg2-binary>=2.9",
    "trino>=0.328",
    "click>=8.1",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.19",
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
migrate-engine = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: requires running Docker Compose stack",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
